# gfxGRAPH

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/skills/gfxgraph-development/: SKILL.md
.github/skills/gfxgraph-integration/: SKILL.md
.github/workflows/: amd-local-ci.yml  gfxgraph-portable-python.yml  native-rocm.yml
.jules/journals/: rocmancer.md  triangulator-forge.md
.jules/reports/research/: repo-triangulation-20260326-170336.md  repo-triangulation-20260428-113653.md
benchmarks/: benchmark_pipeline.hip
docs/: hipgraph-bridge-design.md  torch-hip-rocm-graph.md
include/: hipgraph_bridge.h
native/: README.md  pyproject.toml
native/gfxgraph_native/: __init__.py
native/gfxgraph_native/_native/: __init__.py
python/: README.md  pyproject.toml
python/gfxgraph/: __init__.py  __main__.py  _enable.py
python/gfxgraph/_native/: __init__.py
python/hipgraph_bridge/: _C.py  __init__.py  compile_backend.py  conditional.py  graph_manager.py  ops.py  shape_bucketing.py
src/: capture_compositor.hip  conditional_bridge.hip  graph_utils.hip  init.cpp  launch_pipeline.hip  shape_manager.hip
src/compat/: cuda_intercept.c
tests/: test_compositor.hip  test_conditional.hip  test_pipeline.hip  test_shapes.hip  test_torch_integration.py
