[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gfxgraph"
version = "0.2.0"
description = "Drop-in CUDA Graph parity for AMD gfx1030 RDNA2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Carlos Fundora"}]
dependencies = ["torch>=2.9"]

[project.entry-points."torch.backends"]
hipgraph_bridge = "hipgraph_bridge.compile_backend"

[project.scripts]
gfxgraph = "gfxgraph.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gfxgraph*", "hipgraph_bridge*"]
